# server-client

./: CMakeLists.txt  test_config.ini
source/: Networking.cpp  Networking.h  SipHelper.cpp  SipHelper.h  SipMethods.cpp  SipMethods.h  SipReadConfig.cpp  SipReadConfig.h  SipScenario.cpp  SipScenario.h  SipTesterConfig.cpp  SipTesterConfig.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  XMLParser.cpp  XMLParser.h  invite.txt  main.cpp  uas.xml  utilities.cpp
source/scenarios/: New File  uac.xml  uas.xml
